<resources>
    <string name="app_name">Javaday 2013</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_internet">No internet available</string>
    <string name="no_img_found">No IMG found</string>
    <string name="app_not_available">App not available</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="twitter">Twitter</string>
    <string name="conf_title">Java Day Riga conference 2013</string>
    <string name="where">Kino Citadele</string>
    <string name="adress">13 Janvara st. 8, LV 1050 Riga, Latvia</string>
    <string name="when">Thu, Nov 28, 2013 8:30 AM - 7:00 PM</string>
    <string name="description">Description</string>
    <string name="descripion_info">
        The conference is organised by Latvian Java User Group and Oracle at November 28th in Riga, Latvia.
        This is going to be a major Baltic IT event welcoming more than 250 Java programmers from the region.
        For any questions please contact Latvian JUG.
    </string>
    <string name="simon_ritter_name">Simon Ritter</string>
    <string name="simon_ritter_company">Oracle</string>
    <string name="simon_ritter_twitter">speakjava</string>
    <string name="simon_ritter_description">
        Simon Ritter is a Java Technology Evangelist at Oracle Corporation.
        Simon has been in the IT business since 1984 and holds a Bachelor of Science degree in Physics from Brunel University in the U.K.
        Originally working in the area of UNIX development for AT&amp;T UNIX System Labs and then Novell,
        Simon moved to Sun in 1996. At this time he started working with Java technology and has spent time working both in Java technology development and consultancy.
        Having moved to Oracle as part of the Sun acquisition he now focuses on the core Java platform, Java for client applications and embedded Java.
        He also continues to develop demonstrations that push the boundaries of Java for applications like gestural interfaces and embedded robot controllers.
        Follow him on Twitter, @speakjava and his blog at blogs.oracle.com/speakjava.</string>
    <string name="simon_ritter_presentation_title">
        Project Lambda: Functional Programming Constructs and Simpler Concurrency in Java SE 8</string>
    <string name="simon_ritter_presentation_description">
        The big language features for Java SE 8 are lambda expressions (closures) and default methods (formerly called
        defender methods or virtual extension methods). Adding lambda expressions to the language opens up a host of new
        expressive opportunities for applications and libraries. You might assume that lambda expressions are simply a
        more syntactically compact form of inner classes, but, in fact, the implementation of lambda expressions is
        substantially different and builds on the invokedynamic feature added in Java SE 7. This session will explain
        the ideas behind lambda expressions, how they will be used in Java SE 8 and look at some of the details of their
        implementation.
    </string>
    <string name="cedric_name">Cédric Champeau</string>
    <string name="cedric_company">Pivotal</string>
    <string name="cedric_twitter">CedricChampeau</string>
    <string name="cedric_description">
        Cédric Champeau is a core Groovy committer.
        He joined SpringSource, a division of VMware, in order to help developing the language.
        Prior to that, he spent several years at using Groovy in multiple industrial contexts including DSLs for natural language processing, scripting or even workflows.
        He worked on the implementation of static type checking and static compilation for Groovy 2.</string>
    <string name="cedric_presentation_title">10 years of Groovy!</string>
    <string name="cedric_presentation_description">
        The Groovy language has celebrated its 10th anniversary! First dynamic language on the JVM, with more than 1.7
        million downloads last year, it is still the most widely used alternative language on the JVM. With a low
        learning curve, especially for Java developers, it has lots of advantages and a long innovation tradition. If
        the concepts of closures, functional programming, DSLs, lambdas, scripting or type checking sound familiar to
        your ears, then come hear what Groovy 2.2 has to offer and join an active and passionate community!
    </string>
    <string name="mirco_dotta_name">Mirco Dotta</string>
    <string name="mirco_dotta_company">Typesafe</string>
    <string name="mirco_dotta_twitter">mircodotta</string>
    <string name="mirco_dotta_description">
        Mirco Dotta is a Software Engineer at Typesafe,
        building tools for the Scala language.
        He spends most of his time working on the Scala IDE for Eclipse and related ecosystem.
        His interests include concurrency, both OO and functional programming, software design, and testing.
        Mirco enjoys tweeting as @mircodotta. In his freetime, you\'ll often see him next to a foosball table.</string>
    <string name="mirco_dotta_presentation_title">Effective Scala</string>
    <string name="mirco_dotta_presentation_description">
        Everything you always wanted to know about Scala but were afraid to ask. If you want to be able to optimize your
        use of the Scala programming language to solve real world problems without explosions, broken thumbs or bullet
        wounds then this is the session for you. During the presentation there will be a lot of do\'s and don\'t\'s in
        order to guide you into how to become a better Scala developer. The target audience is intermediate to advanced
        Scala developers.
    </string>
    <string name="tero_name">Tero Parviainen</string>
    <string name="tero_company">Independent</string>
    <string name="tero_twitter">teropa</string>
    <string name="tero_description">Tero Parviainen is an independent software maker with 12 years of professional yak shaving under the belt.
        During this time he has worn many different hats, ranging from consultant to startup CTO.
        His weapons of choice are Clojure, JavaScript, Java, and Ruby.
        Tero is currently putting together the Clojure Cup programming competition and has also just finished writing a book
        called Real-time Web Application Development with Vert.x 2.0.</string>
    <string name="tero_presentation_title">Immutable Java</string>
    <string name="tero_presentation_description">
        Following the rise of Clojure, many of us have become aware of the idea of immutable data structures and their
        benefits. In Clojure, all built-in data structures are immutable, and the same also applies to everything we
        build out of them. This has profound effects on how programs are constructed and transforms the way we can
        reason about them, test them, compose them, and deploy them into concurrent environments. But what is the
        immutability story in Java? Is immutability just a Clojure or a functional thing, or does it apply to the type
        of OO programs we build with Java? If we do want to utilize immutable data in Java, how should we go about it?
        What built-in APIs can we use and what should we stay away from? What libraries are there to help us? How should
        we construct our programs - in the small and in the large? This talk surveys the current state of immutable data
        in Java, comparing and contrasting it to Clojure
    </string>
    <string name="patroklos_name">Patroklos Papapetrou</string>
    <string name="patroklos_company">FoodTec Solutions Inc.</string>
    <string name="patroklos_twitter">ppapapetrou76</string>
    <string name="patroklos_description">Patroklos Papapetrou is a Java architect,
        addicted to software quality and an agile team leader with more than 15 years of experience in software development.
        He believes and invests in people and team spirit seeking quality excellence.
        He\'s co-authoring Sonar in action book, he is an active Sonar community member and plugin contributor.
        He treats software systems as flowers that\'s why he prefers calling himself a software gardener.</string>
    <string name="patroklos_presentation_title">Tracking and Improving Software Quality with Sonar</string>
    <string name="patroklos_presentation_description">
        Software quality is about a lot more than slinging good code. As a java developer you use numerous tools,
        techniques and frameworks as you write, organize, build, test, refactor, and continuously improve your
        applications. Sonar, a free and open source quality platform, makes it radically easier to track, manage, and
        enhance the overall quality of your code. In this presentation I\'m going to talk about Sonar\'s core ideas, and
        its star features that simplify the process of tracking and improving software quality.
    </string>
    <string name="kuksenko_name">Sergey Kuksenko</string>
    <string name="kuksenko_company">Oracle</string>
    <string name="kuksenko_twitter">kuksenk0</string>
    <string name="kuksenko_description">Sergey is Java Performance Engineer working for Oracle.
        His primary skills are performance engineering, benchmarking, JVMs, JIT compilers, and class libraries.
        He’s been accelerating JVMs since 2005 when he was worked for Intel in Apache Harmony performance team.</string>
    <string name="kuksenko_presentation_title1">JDK8: Stream style</string>
    <string name="kuksenko_presentation_description1">
        JDK8 is bringing lambdas into the Java world. But without significant Java SE 8 libraries extensions lambdas
        would be only a toy. The centerpiece of the new libraries is the Streams API (formerly ‘Collections bulk
        operations’). This session presents the Streams API and examples how to get the best performance and scalability
        using the library.
    </string>
    <string name="kuksenko_presentation_title2">"Quantum" Performance Effects</string>
    <string name="kuksenko_presentation_description2">
        Nowadays, CPU microarchitecture is concealed from developers by compilers, VMs, etc. Do Java developers need to
        know microarchitecture details of modern processors? Or, does it like to learn quantum mechanics for cooking?
        Are Java developers safe from leaking low-level microarchitecture details into high level application
        performance behaviour? We will try to answer these questions by analyzing several Java examples.
    </string>
    <string name="sizov_name">Eduard Sizov</string>
    <string name="sizov_company">4finance</string>
    <string name="sizov_twitter">eduardsi</string>
    <string name="sizov_description">Eduards is software craftsman passionate about every aspect of software development.
        His interests include lightweight architectures, clean code, domain-driven design, automation,
        continuous delivery and other spices. Being a Chief Software Architect in 4finance,
        he is responsible for building a premier kick-ass financial platform speaking Java,
        running in the form of various products around the globe.</string>
    <string name="sizov_presentation_title">Micro Service Architecture</string>
    <string name="sizov_presentation_description">
        Eduards will talk about micro service architecture - approach to designing software when complex app is broken
        into tiny, cohesive services which are apps themselves. Anatomy of micro services will be covered with practical
        implementation advices in Java.
    </string>
    <string name="gulati_name">Shekhar Gulati</string>
    <string name="gulati_company">Red Hat</string>
    <string name="gulati_twitter">shekhargulati</string>
</resources>